# async_image_prediction

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
async_image_prediction/: __init__.py  dataset.py  features.py  plots.py
async_image_prediction/api/: app.py  db.py  models.py  test.py
async_image_prediction/database/: initialize_db.py
async_image_prediction/modeling/: predict.py  train.py
async_image_prediction/tasks/: tasks.py
docs/: mkdocs.yml
docs/docs/: index.md
tests/: test_api.py  test_tasks.py
